chatting activity backstack handled

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -86,7 +86,7 @@
             android:ems="10"
             android:textCursorDrawable="@android:color/darker_gray"
             android:fontFamily="@font/aller_rg"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
             android:textSize="20sp"
@@ -144,7 +144,7 @@
             android:ems="10"
             android:textCursorDrawable="@android:color/darker_gray"
             android:fontFamily="@font/aller_rg"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
             android:textSize="20sp"
