--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -27,12 +27,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/room_chat_send_button"
         app:layout_constraintTop_toBottomOf="@id/room_chat_message_list_view"
-        app:layout_constraintVertical_weight="1" />
+        app:layout_constraintVertical_weight="1"
+        android:backgroundTint="@android:color/darker_gray"
+        android:ems="10"
+        android:fontFamily="@font/aller_rg"
+        android:inputType="textPersonName"
+        android:outlineAmbientShadowColor="?attr/colorButtonNormal"
+        android:outlineSpotShadowColor="@android:color/darker_gray"
+        android:shadowColor="@android:color/darker_gray"
+        android:textAlignment="textStart"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/darker_gray"
+        android:textColorLink="?attr/colorButtonNormal"
+        android:textCursorDrawable="@android:color/darker_gray"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/room_chat_send_button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:text="send"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintLeft_toRightOf="@id/room_chat_message_edit_text"
