sign up data save on firebase db, storage, auth

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -45,6 +46,7 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="32dp"
                 android:scaleType="fitXY"
+                bind:setProfileImage="@{handler.mProfileBitmap}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
@@ -211,7 +213,7 @@
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="48dp"
                 android:orientation="horizontal"
-                android:onCheckedChanged="@{handler.onGenderCheckChanged}"
+                android:onCheckedChanged="@{handler::onGenderCheckChanged}"
                 app:layout_constraintBottom_toBottomOf="@id/sign_up_gender_text_view"
                 app:layout_constraintStart_toEndOf="@+id/sign_up_gender_text_view"
                 app:layout_constraintTop_toTopOf="@id/sign_up_gender_text_view"
