--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:bind="http://schemas.android.com/tools">
 
     <data>
@@ -16,15 +15,12 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_light_background"
-        tools:context=".view.activity.SignUpActivity"
-        tools:layout_editor_absoluteY="81dp">
+        android:layout_height="match_parent">
 
-        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/cardview_light_background">
+            android:alpha="@{handler.mIsRequesting? 0.6f : 1.0f}">
 
             <TextView
                 android:id="@+id/sign_up_title"
@@ -46,11 +42,11 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="32dp"
                 android:scaleType="fitXY"
-                bind:setProfileImage="@{handler.mProfileBitmap}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/user"
+                bind:setProfileImage="@{handler.mProfileBitmap}" />
 
             <TextView
                 android:id="@+id/sign_up_name_text_view"
@@ -73,10 +69,10 @@
                 android:layout_marginTop="24dp"
                 android:background="@drawable/stroke_lower"
                 android:ems="10"
-                android:text="@={handler.mName}"
                 android:fontFamily="@font/aller_rg"
                 android:inputType="textPersonName"
                 android:paddingLeft="50dp"
+                android:text="@={handler.mName}"
                 android:textColor="@color/textColor"
                 android:textCursorDrawable="@android:color/darker_gray"
                 android:textSize="20sp"
@@ -138,9 +134,9 @@
                 android:background="@drawable/stroke_lower"
                 android:ems="10"
                 android:fontFamily="@font/aller_rg"
-                android:text="@={handler.mPassword}"
                 android:inputType="textPassword"
                 android:paddingLeft="50dp"
+                android:text="@={handler.mPassword}"
                 android:textColor="@color/textColor"
                 android:textCursorDrawable="@android:color/darker_gray"
                 android:textSize="20sp"
@@ -212,12 +208,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="48dp"
-                android:orientation="horizontal"
                 android:onCheckedChanged="@{handler::onGenderCheckChanged}"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@id/sign_up_gender_text_view"
                 app:layout_constraintStart_toEndOf="@+id/sign_up_gender_text_view"
-                app:layout_constraintTop_toTopOf="@id/sign_up_gender_text_view"
-                tools:layout_editor_absoluteY="513dp">
+                app:layout_constraintTop_toTopOf="@id/sign_up_gender_text_view">
 
                 <RadioButton
                     android:id="@+id/sign_up_man_radio_button"
@@ -264,8 +259,8 @@
                 android:layout_marginLeft="48dp"
                 android:layout_marginBottom="8dp"
                 android:dropDownWidth="match_parent"
-                android:spinnerMode="dialog"
                 android:onItemSelected="@{handler::onYearSpinnerItemSelected}"
+                android:spinnerMode="dialog"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@id/sign_up_date_of_birth_text_view"
                 app:layout_constraintStart_toEndOf="@id/sign_up_date_of_birth_text_view"
@@ -276,9 +271,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="29dp"
                 android:layout_marginBottom="8dp"
+                android:onItemSelected="@{handler::onMonthSpinnerItemSelected}"
                 android:spinnerMode="dialog"
                 android:textAlignment="center"
-                android:onItemSelected="@{handler::onMonthSpinnerItemSelected}"
                 app:layout_constraintBottom_toBottomOf="@id/sign_up_date_of_birth_text_view"
                 app:layout_constraintStart_toEndOf="@+id/sign_up_year_spinner"
                 app:layout_constraintTop_toTopOf="@id/sign_up_date_of_birth_text_view" />
@@ -288,9 +283,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="29dp"
                 android:layout_marginBottom="8dp"
+                android:onItemSelected="@{handler::onDaySpinnerItemSelected}"
                 android:spinnerMode="dialog"
                 android:textAlignment="center"
-                android:onItemSelected="@{handler::onDaySpinnerItemSelected}"
                 app:layout_constraintBottom_toBottomOf="@id/sign_up_date_of_birth_text_view"
                 app:layout_constraintStart_toEndOf="@+id/sign_up_month_spinner"
                 app:layout_constraintTop_toTopOf="@id/sign_up_date_of_birth_text_view" />
@@ -311,6 +306,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/sign_up_date_of_birth_text_view" />
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="@{handler.mIsRequesting? View.VISIBLE : View.INVISIBLE}"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
