--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,7 +20,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="@{handler.mIsRequesting? 0.6f : 1.0f}">
+            android:background="@color/cardview_light_background">
 
             <TextView
                 android:id="@+id/sign_up_title"
@@ -308,13 +308,14 @@
                 app:layout_constraintTop_toBottomOf="@id/sign_up_date_of_birth_text_view" />
 
             <ProgressBar
+                android:id="@+id/sign_up_progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="@{handler.mIsRequesting? View.VISIBLE : View.INVISIBLE}"/>
+                android:visibility="invisible"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
