sign in change ui and ready to support google sign in

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#a06d6e6f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#9c9c9c</color>
     <color name="textColor">#013143</color>
     <color name="lightGray">#efefef</color>
     <color name="cBlue">#3a9deb</color>
