--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,20 +22,6 @@
             android:layout_height="match_parent"
             android:background="@color/cardview_light_background">
 
-            <TextView
-                android:id="@+id/sign_up_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="48dp"
-                android:fontFamily="@font/aller_bd"
-                android:text="@string/sign_up_title"
-                android:textColor="@color/textColor"
-                android:textSize="36sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
                 android:id="@+id/sign_up_profile_image_view"
                 android:layout_width="100dp"
@@ -44,7 +30,7 @@
                 android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/user"
                 bind:setProfileImage="@{handler.mProfileBitmap}" />
 
@@ -311,11 +297,11 @@
                 android:id="@+id/sign_up_progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="invisible"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
