--- a/app/src/main/res/layout/fragment_sign_up_extra.xml
+++ b/app/src/main/res/layout/fragment_sign_up_extra.xml
@@ -33,13 +33,22 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="put your profile image"
+                    android:textColor="@android:color/black"
+                    android:textSize="24sp" />
+
                 <ImageView
                     android:id="@+id/sign_up_extra_profile_image_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
+                    android:transitionName="profile"
                     app:layout_collapseMode="parallax"
-                    bind:setProfileImage="@{handler.mProfileBitmap}" />
+                    bind:setSignUpExtraProfile="@{handler.mProfileBitmap}" />
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -115,13 +124,13 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/sign_up_female_card_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="50dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
-                    app:layout_constraintEnd_toStartOf="@id/sign_up_man_card_view"
+                    app:layout_constraintEnd_toStartOf="@id/sign_up_male_card_view"
                     app:layout_constraintStart_toStartOf="@id/sign_up_gender_text_view"
                     app:layout_constraintTop_toBottomOf="@id/sign_up_gender_text_view">
 
@@ -135,9 +144,9 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/sign_up_man_card_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/sign_up_male_card_view"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
                     android:layout_marginTop="30dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
@@ -146,8 +155,10 @@
                     app:layout_constraintTop_toBottomOf="@id/sign_up_gender_text_view">
 
                     <ImageView
+                        android:id="@+id/sign_up_male_image_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:focusable="true"
                         android:padding="25dp"
                         android:src="@drawable/male_gray" />
                 </android.support.v7.widget.CardView>
@@ -176,9 +187,10 @@
 
                 <Spinner
                     android:id="@+id/sign_up_age_spinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="@id/sign_up_man_card_view"
+                    android:onItemSelected="@{handler::onAgeSpinnerItemSelected}"
+                    app:layout_constraintEnd_toEndOf="@id/sign_up_male_card_view"
                     app:layout_constraintTop_toTopOf="@id/sign_up_age_text_view" />
 
                 <TextView
@@ -205,13 +217,14 @@
 
                 <Spinner
                     android:id="@+id/sign_up_country_spinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="@id/sign_up_man_card_view"
+                    android:onItemSelected="@{handler::onCountrySpinnerItemSelected}"
+                    app:layout_constraintEnd_toEndOf="@id/sign_up_male_card_view"
                     app:layout_constraintTop_toTopOf="@id/sign_up_country_text_view" />
 
                 <Button
-                    android:id="@+id/sign_up_previous_button"
+                    android:id="@+id/sign_up_extra_previous_button"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -230,7 +243,7 @@
                     app:layout_constraintTop_toBottomOf="@id/sign_up_country_text_view" />
 
                 <Button
-                    android:id="@+id/sign_up_default_next_button"
+                    android:id="@+id/sign_up_extra_finish_button"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -240,6 +253,7 @@
                     android:layout_marginBottom="30dp"
                     android:background="@color/cBlue"
                     android:fontFamily="@font/aller_bd"
+                    android:onClick="@{handler.onCreateUser}"
                     android:text="finish"
                     android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
