--- a/app/src/main/res/layout/bottom_dialog.xml
+++ b/app/src/main/res/layout/bottom_dialog.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="handler"
+            type="com.example.leeyh.abroadapp.viewmodel.UserViewModel" />
+    </data>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/location_menu_layout"
-        android:layout_width="0dp"
+        android:id="@+id/location_bottom_dialog_root"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:visibility="visible"
@@ -18,21 +23,9 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/location_distance_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:fontFamily="@font/aller_rg"
-            android:text="Region"
-            android:textColor="@color/textColor"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/location_distance_7" />
 
         <TextView
-            android:id="@+id/location_distance_5"
+            android:id="@+id/location_bottom_dialog_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -44,34 +37,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/location_distance_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:fontFamily="@font/aller_rg"
-            android:text="Age"
-            android:textColor="@color/textColor"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/location_distance_5" />
-
-        <Button
-            android:id="@+id/searchButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aller_rg"
-            android:text="Search"
-            android:textAllCaps="false"
-            android:textColor="@color/cBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <SeekBar
-            android:id="@+id/locSeekBar"
+            android:id="@+id/location_bottom_dialog_seek_bar"
             style="@style/Base.Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="0dp"
             android:layout_height="30dp"
@@ -84,32 +51,58 @@
             android:progressTint="@color/textColor"
             android:thumb="@android:drawable/presence_invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/location_distance_5"
+            app:layout_constraintStart_toEndOf="@+id/location_bottom_dialog_location"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/location_bottom_dialog_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/aller_rg"
+            android:text="Age"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location_bottom_dialog_location" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/location_bottom_dialog_age_spinner"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:spinnerMode="dialog"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/locSeekBar" />
+            app:layout_constraintTop_toBottomOf="@+id/location_bottom_dialog_seek_bar" />
 
-        <Spinner
-            android:id="@+id/spinner3"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:spinnerMode="dialog"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
         <TextView
-            android:id="@+id/infoText"
+            android:id="@+id/location_bottom_dialog_region_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/aller_rg"
+            android:text="Region"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location_bottom_dialog_age" />
+
+        <Spinner
+            android:id="@+id/location_bottom_dialog_region_spinner"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:spinnerMode="dialog"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location_bottom_dialog_age_spinner" />
+
+        <TextView
+            android:id="@+id/location_bottom_dialog_info_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -120,9 +113,21 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/location_distance_3" />
+            app:layout_constraintTop_toBottomOf="@+id/location_bottom_dialog_region_text_view" />
+
+        <Button
+            android:id="@+id/location_bottom_dialog_search_button"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/aller_rg"
+            android:text="Search"
+            android:textAllCaps="false"
+            android:textColor="@color/cBlue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+</layout>
