detail member fragment fix touch listener and ui

--- a/app/src/main/res/layout/activity_member_detail_view.xml
+++ b/app/src/main/res/layout/activity_member_detail_view.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView4"
+        android:id="@+id/detail_fuction_card_view"
         android:layout_width="0dp"
         android:layout_height="100dp"
         app:cardBackgroundColor="@android:color/background_light"
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
 
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView4"
+        app:layout_constraintBottom_toTopOf="@+id/detail_fuction_card_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapView">
